--- a/MevetProject/rental_ads/templates/kino.html
+++ b/MevetProject/rental_ads/templates/kino.html
@@ -16,7 +16,7 @@
             <h3>{{ rental.name }}</h3>
             <p> rental.description </p>
             <p>{{ rental.address }}</p>
-            <button class="add-to-favorites">Add to Favorites</button>
+           <button class="add-to-favorites fa-regular fa-heart " style="font-size: 20px;"> Добавить в избранное</button>
         </a>
     </div>
 
