Adding beautiful search boxes and 20-character output kino.html and rental_search_results.html

--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -84,8 +84,8 @@
 
         </div>
         <nav>
-            <a href="#okno" class="fa-regular fa-comment ff" style="font-size: 20px;"><font class="txtm">Чат</font></a>
-            <a href="/" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm">Профиль</font></a>
+<!--            <a href="#zatemnenie" class="fa-regular fa-comment ff" style="font-size: 20px;"><font class="txtm">Чат</font></a>-->
+            <a href="#zatemnenie" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm">Профиль</font></a>
             <a href="/" class="fa-regular fa-heart ff" style="font-size: 20px;"><font class="txtm">Избранное</font></a>
         </nav>
     </div>
