End design change modal form register/login

--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -96,7 +96,7 @@
 
 </br>
 <div id="zatemnenie">
-    <div id="okno2">
+    <div id="okno">
         <p>Авторизуйтесь</p><br>
 
         <h2>Login</h2>
