--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -85,8 +85,13 @@
         </div>
         <nav>
 <!--            <a href="#zatemnenie" class="fa-regular fa-comment ff" style="font-size: 20px;"><font class="txtm">Чат</font></a>-->
-            <a href="#zatemnenie" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm">Профиль</font></a>
-            <a href="/" class="fa-regular fa-heart ff" style="font-size: 20px;"><font class="txtm">Избранное</font></a>
+            <a href="/" class="fa-regular fa-file-alt ff" style="font-size: 20px;"><font class="txtm"> Объявления</font></a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm"> Выход</font></a>
+            {% else %}
+                <a href="#zatemnenie" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm"> Вход</font></a>
+            {% endif %}
+            <a href="/" class="fa-regular fa-heart ff" style="font-size: 20px;"><font class="txtm"> Избранное</font></a>
         </nav>
     </div>
 
