--- a/MevetProject/rental_ads/templates/kino.html
+++ b/MevetProject/rental_ads/templates/kino.html
@@ -2,23 +2,26 @@
 
 {% load static %}
 
+
 {% block title %}Кинозалы{% endblock %}
 
 {% block content %}
-<h1>Кинозалы</h1>
 
-<div class="rentals-container">
+<br>
+<h1 align="center">Кинозалы</h1>
+<br>
+<div class="rentals-container" align="center">
     {% for rental in rental_list %}
-    <div class="rental-item">
-        <a href="{% url 'rental_detail' category_name=rental.category.name rental_id=rental.id %}">
+    <div class="rental-item" href="{% url 'rental_detail' category_name=rental.category.name rental_id=rental.id %}">
+        <a href="{% url 'rental_detail' category_name=rental.category.name rental_id=rental.id %}" style=" text-decoration: none;">
             <img src="{{ rental.main_image.url }}">
-            <h3>{{ rental.title }}</h3>
-            <p>{{ rental.description|slice:":20" }}{% if rental.description|length > 20 %}...{% endif %}</p>
-            <p>{{ rental.address|slice:":20" }}{% if rental.address|length > 20 %}...{% endif %}</p>
+            <h3 style=" font-weight: bolder; ">{{ rental.title }}</h3>
+            <p>{{ rental.address|slice:":50" }}{% if rental.address|length > 50 %}...{% endif %}</p>
             <h4>{{ rental.price }} ₽</h4>
-            <br>
-           <button class="add-to-favorites fa-regular fa-heart " style="font-size: 20px;"> Добавить в избранное</button>
-        </a>
+
+            </a>
+           <button class="add-to-favorites fa-regular fa-heart " style="font-size: 18px;"> Добавить в избранное</button>
+
     </div>
 
     {% endfor %}
