--- a/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
@@ -55,15 +55,14 @@
 .rentals-container {
         display: flex;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: flex-start;
-        margin: 0 auto;
-        max-width: 1250px;
+
 
 
     }
 .rental-item {
-    width: 30%;
+    width: 28%;
     height: 500px;
   margin: 0.5%;
   margin-bottom: 20px;
