--- a/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_osnov.css
@@ -77,8 +77,10 @@
 
 .rental-item:hover {
     box-shadow: 0px 40px 40px 0px rgba(0,0,0,0.2);
-    border-radius: 29px;
-    border: solid 1.5px gray;
+    border-radius: 20px;
+    border: solid 1px gray;
+    background-color: #E8E8E8;
+    opacity: 95%;
 }
 
 .rental-item img {
@@ -109,6 +111,12 @@
   margin-bottom: 10px;
 }
 
+hr {
+    border: none; /* Убираем границу */
+    background-color: black; /* Цвет линии */
+
+    height: 2px; /* Толщина линии */
+ }
 
 /* new off*/
 
