--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -15,88 +15,51 @@
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-z+LsWLOx9dQgQ4O1tK9mXHx6qNF9l9pQGK8te68XvvGdQh8zL9aVZk7hV52S9Jy8bLaANf5Y4eu3ChmkXmpymg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <style>
     </style>
 </head>
 <body>
+
 <header>
-    <nav class="nav2">
-        <a href="/" class="fa-solid fa-language" id="google_translate_element"><font class="txtm"> RU</font></a>
-
-        <a href="#zatemnenie" class="fa-solid fa-location-dot"><font class="txtm"> ВОЛГОГРАД</font></a>
-        <a href="#zatemnenie" class="fa-solid fa-laptop"><font class="txtm"> СТАНЬТЕ ПРОДАВЦОМ</font></a>
-    </nav>
-    <div id="head">
-        <div class="wrap-logo">
-            <nav class="karegoriya_resursov">
-                <div title="Menu" id="navigation_leaked">
-
-                    <input type="checkbox">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-
-                    {% with request.path|lower|slice:":-1" as current_path %}
-                    <ul id="menyu_sayta">
-                        <li>
-                            <a href="/"
-                               style="text-decoration: {% if '' == current_path %}underline; color: black;{% else %}none{% endif %};">ГЛАВНАЯ
-                                СТРАНИЦА</a>
-                        </li>
-
-                        <li><a href="/pagefoto"
-                               style="text-decoration: {% if '/pagefoto' == current_path %}underline; color: black;{% else %}none{% endif %};">ФОТОСТУДИИ</a>
-                        </li>
-                        <li>
-                            <a href="/svadba"
-                               style="text-decoration: {% if '/svadba' == current_path %}underline; color: black;{% else %}none{% endif %};">ОРГАНИЗАЦИЯ
-                                СВАДЕБ</a>
-                        </li>
-                        <li>
-                            <a href="/banket"
-                               style="text-decoration: {% if '/banket' == current_path %}underline; color: black;{% else %}none{% endif %};">БАНКЕТНЫЕ
-                                ЗАЛЫ</a>
-                        </li>
-                        <li>
-                            <a href="/kino"
-                               style="text-decoration: {% if '/kino' == current_path %}underline; color: black;{% else %}none{% endif %};">КИНОЗАЛЫ</a>
-                        </li>
-                        <li>
-                            <a href="/kon"
-                               style="text-decoration: {% if '/kon' == current_path %}underline; color: black;{% else %}none{% endif %};">ПЛОЩАДКИ
-                                ДЛЯ ПРОВЕДЕНИЯ КОНЦЕРОВ</a>
-                        </li>
-                    </ul>
-                    {% endwith %}
-                </div>
-            </nav>
-            <!-- <a href="#"class="fa-solid fa-bars" style=" font-size: 40px;"></a> -->
-            <a href="/" class="logo"><img src="{% static 'rental_ads/img/logo.png' %}" height="70px"></a>
-            <div id="tp">
-                <form method="get" action="{% url 'rental_search' %}">
-                    <input type="search" name="query" placeholder="Search rentals...">
-                    <button type="submit">
-                        <i class="fa fa-search"></i>
-                    </button>
-                </form>
-            </div>
-
-        </div>
-        <nav>
-<!--            <a href="#zatemnenie" class="fa-regular fa-comment ff" style="font-size: 20px;"><font class="txtm">Чат</font></a>-->
-
-            {% if user.is_authenticated %}
-                <a href="/rental_manage" class="fa-regular fa-file-alt ff" style="font-size: 20px;"><font class="txtm"> Объявления</font></a>
-                <a href="{% url 'logout' %}" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm"> Выход</font></a>
-            {% else %}
-                <a href="#zatemnenie" class="fa-regular fa-user ff" style="font-size: 20px;"><font class="txtm"> Вход</font></a>
-            {% endif %}
-            <a href="/favorites" class="fa-regular fa-heart ff" style="font-size: 20px;"><font class="txtm"> Избранное</font></a>
-        </nav>
+  <div class="top">
+    <form class="search-form" method="get" action="{% url 'rental_search' %}">
+      <div class="left">
+        <input type="search" class="search-input" placeholder="Поиск">
+      </div>
+      <button type="submit" class="search-button"><i class="fa-solid fa-search"></i></button>
+    </form>
+    <div class="center">
+      <img src="{% static 'rental_ads/img/logo.png' %}" alt="Логотип">
     </div>
-
+    <div class="right">
+        {% if user.is_authenticated %}
+      <a href="/rental_manage" class="fa-regular fa-file-alt"></a>
+      <a href="{% url 'logout' %}" class="fa-regular fa-user"></a>
+{% else %}
+        <a href="#zatemnenie" class="fa-regular fa-user"></a>
+        {% endif %}
+      <a href="/favorites" class="fa-regular fa-heart"></a>
+    </div>
+  </div>
+  <div class="bottom">
+      {% with request.path|lower|slice:":-1" as current_path %}
+    <a href="/" class="fa-regular fas far far fa-compass" style="background: {% if '' == current_path %}  #fff;
+  	color: #333;{% else %}none{% endif %};"> <font class="bottom-text">Главная страница</font></a>
+    <a href="/pagefoto" class="fa-regular fas fa-photo"> <font class="bottom-text">Фотостудии</font></a>
+    <a href="/svadba" class="fa-regular fas fa-gift"> <font class="bottom-text">Свадебные агенства</font></a>
+    <a href="/banket" class="fa-regular fas fa-glass-cheers"> <font class="bottom-text">Банкетные залы</font></a>
+    <a href="/kino" class="fa-regular fas fa-video"> <font class="bottom-text">Кинозалы</font></a>
+    <a href="/kon" class="fa-regular fas fa-guitar"> <font class="bottom-text">Концертные залы</font></a>
+      {% endwith %}
+  </div>
 </header>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 {% block content %} {% endblock content %}
 
