--- a/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
+++ b/MevetProject/rental_ads/static/rental_ads/css/style_menu.css
@@ -1,363 +1,255 @@
-
-
 * {box-sizing: border-box;}
 
-body { 
-  margin: 0;
-  
+body {
+    margin: 0;
 }
 
 header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  flex-direction: column; /* Добавляем свойство, чтобы меню располагались один под другим */
-  align-items: center;
-  padding: 10px;
-  background: gray;
-  background-color: rgba(0, 0, 0, 0.7);
-  backdrop-filter: blur(13px);
-  transition: transform 0.3s ease-in-out;
-  z-index: 999;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column; /* Добавляем свойство, чтобы меню располагались один под другим */
+    align-items: center;
+    padding: 10px;
+    background: gray;
+    background-color: rgba(0, 0, 0, 0.7);
+    backdrop-filter: blur(13px);
+    transition: transform 0.3s ease-in-out;
+    z-index: 999;
 }
 
-.top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 1200px;
+.top { /*Верхнее меню*/
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1200px;
 }
 
-.left {
-  display: flex;
-  align-items: center;
+.left { /*Левая часть верхнего меню*/
+    display: flex;
+    align-items: center;
 }
 
-/*input[type="search"] {
-  padding: 10px;
-  border: none;
-  background-color: #f2f2f2;
+.search-form {
+	margin-left: -3%;
+    display: flex;
+    align-items: center;
+}
 
-}*/
+.search-input {
+    padding: 10px;
+    border: none;
+    border-radius: 20px;
+    margin-right: 10px;
+}
 
-.center {
-  text-align: center;
+.search-button {
+    background-color: gray;
+    border: none;
+    border-radius: 50px;
+    color: white;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.search-button:hover {
+    background-color: black;
+}
+
+.center { /*Центральная часть верхнего меню*/
+    text-align: center;
 }
 
 .center img {
 	margin-right: 5%;
-  max-width: 25%;
+    max-width: 25%;
 }
 
-.right {
-  display: flex;
-  align-items: center;
+.right { /*Правая часть верхнего меню*/
+    display: flex;
+    align-items: center;
 }
 
 .right a {
-
 	transition: all 0.2s ease-in-out;
-  margin-left: 45px;
-  text-decoration: none;
-  color: white;
-  font-size: 20px;
+    margin-left: 45px;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
 }
 
 .right a:hover {
   	color: red;
 }
 
-.bottom {
-  display: flex;
-  justify-content: center; /* Стили для меню, чтобы оно располагалось справа */
-  width: 100%;
-  max-width: 1200px;
-  margin-top: 14px;
+.bottom { /*Нижнее меню*/
+    display: flex;
+    justify-content: center; /* Стили для меню, чтобы оно располагалось справа */
+    width: 100%;
+    max-width: 1200px;
+    margin-top: 14px;
 }
 
 .bottom a {
 	color: white;
 	font-size: 13px;
-  margin: 0 15px;
-  text-decoration: none;
-  padding: 7px;
-  border-radius: 20px;
-
-  transition: all 0.2s ease-in-out;
+    margin: 0 15px;
+    text-decoration: none;
+    padding: 7px;
+    border-radius: 20px;
+    transition: all 0.2s ease-in-out;
 }
 
 .bottom a:hover {
 	background: #fff;
   	color: #333;
-
 }
 
+.bottom-text{
+    font-size: 13px;
+    font-family: 'Century Gothic', sans-serif;
+}
 
-.search-form {
-	margin-left: -3%;
-      display: flex;
-      align-items: center;
-    }
-
-    .search-input {
-      padding: 10px;
-      border: none;
-      border-radius: 20px;
-      margin-right: 10px;
-    }
-
-    .search-button {
-      background-color: gray;
-      border: none;
-      border-radius: 50px;
-      color: white;
-      padding: 10px 15px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    .search-button:hover {
-      background-color: black;
-    }
-
-    .bottom-text{
-    	font-size: 13px;
-    	font-family: 'Century Gothic', sans-serif;
-
-    }
-
-
-
-
-/*Форма Login*/
+/*Форма Логина и регистрации*/
 
 #zatemnenie {
-        background: rgba(102, 102, 102, 0.5);
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        top: 0;
-        left: 0;
-        display: none;
-      }
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+}
 #okno {
-        width: 300px;
-        height: 300px;
-        text-align: center;
-        padding: 15px;
-        border: 1px solid black;
-        border-radius: 10px;
-        color: black;
-        position: fixed;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        background: white;
-      }
+    width: 300px;
+    height: 320px;
+    text-align: center;
+    padding: 15px;
+    border-radius: 25px;
+    color: white;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(13px);
+    font-family: 'Century Gothic', sans-serif;
+}
+
 #zatemnenie:target {display: block;}
-      .close {
-        display: inline-block;
-        border: 1px solid black;
-        border-radius: 10px;
-        color: black;
-        padding: 0 12px;
-        margin: 10px;
-        text-decoration: none;
-        background: #f2f2f2;
-        font-size: 14pt;
-        cursor:pointer;
-      }
-.close:hover {background: red; color: white;}
 
-
-
-
-
-#main-holder {
-  width: 50%;
-  height: 70%;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  background-color: white;
-  border-radius: 7px;
-  box-shadow: 0px 0px 5px 2px black;
+.close {
+    display: inline-block;
+    color: white;
+    padding: 0 12px;
+    margin: 10px;
+    text-decoration: none;
+    font-size: 20px;
+    cursor:pointer;
+    transition: all 0.2s ease-in-out;
 }
 
-#login-error-msg-holder {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
-
-#login-error-msg {
-  width: 23%;
-  text-align: center;
-  margin: 0;
-  padding: 5px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #8a0000;
-  border: 1px solid #8a0000;
-  background-color: #e58f8f;
-  opacity: 0;
-}
-
-#error-msg-second-line {
-  display: block;
+.close:hover {
+	color: red;
 }
 
 #login-form {
-  align-self: flex-start;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
-
-.login-form-field::placeholder {
-  color: #3a3a3a;
+    align-self: flex-start;
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 .login-form-field {
-  border: none;
-  border-bottom: 1px solid #3a3a3a;
-  margin-bottom: 10px;
-  border-radius: 3px;
-  outline: none;
-  padding: 0px 0px 5px 5px;
+    border: none;
+    color: #3a3a3a;
+    border: 1px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 25px;
+    outline: none;
+    padding: 10px;
+    width: 80%;
+    transition: all 0.2s ease-in-out;
+}
+
+.login-form-field:active{
+	width: 85%;
 }
 
 #login-form-submit {
-  width: 100%;
-  padding: 7px;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-  background-color: #3a3a3a;
-  cursor: pointer;
-  outline: none;
+    width: 80%;
+    padding: 8px;
+    border: none;
+    border-radius: 10px;
+    color: #3a3a3a;
+    font-weight: bold;
+    background-color: white;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.2s ease-in-out;
+    border: solid 1px white;
+}
+
+#login-form-submit:hover {
+	border-radius: 25px;
+	border: solid 1px white;
+    background-color: #3a3a3a;
+    color:  white;
+}
+
+.register-button{
+	width: 70%;
+	border-radius: 10px;
+	color: white;
+	padding: 8px;
+	transition: all 0.2s ease-in-out;
+	text-decoration: none;
+	font-family: 'Century Gothic', sans-serif;
+
+}
+.register-button:hover {
+    border-radius: 25px;
+    background-color: white;
+    color:   #3a3a3a;
 }
 
 /*Форма Registr*/
 #zatemnenie2 {
-        background: rgba(102, 102, 102, 0.5);
-        width: 100%;
-        height: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: none;
-      }
-      #okno2 {
-        width: 300px;
-        height: 300px;
-        text-align: center;
-        padding: 15px;
-        border: 1px solid black;
-        border-radius: 10px;
-        color: black;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        background: white;
-      }
-      #zatemnenie2:target {display: block;}
-      .close2 {
-        display: inline-block;
-        border: 1px solid black;
-        border-radius: 10px;
-        color: black;
-        padding: 0 12px;
-        margin: 10px;
-        text-decoration: none;
-        background: #f2f2f2;
-        font-size: 14pt;
-        cursor:pointer;
-      }
-      .close2:hover {background: red; color: white;}
-
-
-
-
-
-      #main-holder2 {
-  width: 50%;
-  height: 70%;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-  background-color: white;
-  border-radius: 7px;
-  box-shadow: 0px 0px 5px 2px black;
+     width: 100%;
+     height: 100%;
+     position: absolute;
+     top: 0;
+     left: 0;
+     display: none;
 }
 
-#login-error-msg-holder2 {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  justify-items: center;
-  align-items: center;
+#okno2 {
+     width: 300px;
+     height: 370px;
+     text-align: center;
+     padding: 15px;
+     border-radius: 25px;
+     color: white;
+     position: fixed;
+     top: 0;
+     right: 0;
+     bottom: 0;
+     left: 0;
+     margin: auto;
+     background-color: rgba(0, 0, 0, 0.6);
+     backdrop-filter: blur(13px);
+     font-family: 'Century Gothic', sans-serif;
 }
 
-#login-error-msg2 {
-  width: 23%;
-  text-align: center;
-  margin: 0;
-  padding: 5px;
-  font-size: 12px;
-  font-weight: bold;
-  color: #8a0000;
-  border: 1px solid #8a0000;
-  background-color: #e58f8f;
-  opacity: 0;
-}
+#zatemnenie2:target {display: block;}
 
-#error-msg-second-line2 {
-  display: block;
-}
-
-#login-form2 {
-  align-self: flex-start;
-  display: grid;
-  justify-items: center;
-  align-items: center;
-}
-
-.login-form-field2::placeholder {
-  color: #3a3a3a;
-}
-
-.login-form-field2 {
-  border: none;
-  border-bottom: 1px solid #3a3a3a;
-  margin-bottom: 10px;
-  border-radius: 3px;
-  outline: none;
-  padding: 0px 0px 5px 5px;
-}
-
-#login-form-submit2 {
-  width: 100%;
-  padding: 7px;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  font-weight: bold;
-  background-color: #3a3a3a;
-  cursor: pointer;
-  outline: none;
-}
 
 
 
