--- a/MevetProject/rental_ads/templates/base.html
+++ b/MevetProject/rental_ads/templates/base.html
@@ -44,16 +44,28 @@
     </div>
   </div>
   <div class="bottom">
-      {% with request.path|lower|slice:":-1" as current_path %}
-    <a href="/" class="fa-regular fas far far fa-compass" style="background: {% if '' == current_path %}  #fff;
-  	color: #333;{% else %}none{% endif %};"> <font class="bottom-text">Главная страница</font></a>
-    <a href="/pagefoto" class="fa-regular fas fa-photo"> <font class="bottom-text">Фотостудии</font></a>
-    <a href="/svadba" class="fa-regular fas fa-gift"> <font class="bottom-text">Свадебные агенства</font></a>
-    <a href="/banket" class="fa-regular fas fa-glass-cheers"> <font class="bottom-text">Банкетные залы</font></a>
-    <a href="/kino" class="fa-regular fas fa-video"> <font class="bottom-text">Кинозалы</font></a>
-    <a href="/kon" class="fa-regular fas fa-guitar"> <font class="bottom-text">Концертные залы</font></a>
-      {% endwith %}
-  </div>
+  {% with request.path|lower|slice:":-1" as current_path %}
+    <a href="/" class="fa-regular fas far far fa-compass" style="background: {% if '' == current_path %}  white;
+      color: black;{% endif %}">
+      <font class="bottom-text">Главная страница</font>
+    </a>
+    <a href="/pagefoto" class="fa-regular fas fa-photo" style="background: {% if '/pagefoto' == current_path %} white; color: black; {% endif %}">
+      <font class="bottom-text">Фотостудии</font>
+    </a>
+    <a href="/svadba" class="fa-regular fas fa-gift" style="background: {% if '/svadba' == current_path %} white; color: black; {% endif %}">
+      <font class="bottom-text">Свадебные агенства</font>
+    </a>
+    <a href="/banket" class="fa-regular fas fa-glass-cheers" style="background: {% if '/banket' == current_path %} white; color: black; {% endif %}">
+      <font class="bottom-text">Банкетные залы</font>
+    </a>
+    <a href="/kino" class="fa-regular fas fa-video" style="background: {% if '/kino' == current_path %} white; color: black; {% endif %}">
+      <font class="bottom-text">Кинозалы</font>
+    </a>
+    <a href="/kon" class="fa-regular fas fa-guitar" style="background: {% if '/kon' == current_path %} white; color: black; {% endif %}">
+      <font class="bottom-text">Концертные залы</font>
+    </a>
+  {% endwith %}
+</div>
 </header>
 <br>
 <br>
@@ -107,7 +119,7 @@
     <div class="container">
 
         <div class="footer-col">
-            <h4>Подпишитесь на нас</h4>
+            <h4>&nbsp;Подпишитесь на нас</h4>
 
             <div class="social-links">
                 <a href="https://vk.com/mixysami"><i class="fa-brands fa-vk"></i></a>
@@ -117,7 +129,7 @@
             </div>
         </div>
 
-        <p style="color: white;">©2022 MEVET | All Rights Reserved</p>
+        <p style="color: white;">©2023 MEVET | All Rights Reserved</p>
     </div>
 </footer>
 <script src="https://kit.fontawesome.com/7dd3d9efdc.js" crossorigin="anonymous"></script>
